--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 <body>
     <h1>WELCOME</h1>
     <p>press the next line to continue</p>
-    <a href="https://www.xnxx.com">this is achor element, press on the text to go to a suprise website, click at your own risk :/</a>
+    <a href="www.rickroll.com">this is achor element, press on the text to go to a suprise website, click at your own risk :/</a>
 
 </body>
 
